package isel.tds.ttt.model

import isel.tds.ttt.model.Player.X
import kotlin.plus
import kotlin.text.associateWith

val EMPTY = null
const val BOARD_SIDE_SIZE = 3
const val BOARD_TOTAL_SIZE = BOARD_SIDE_SIZE * BOARD_SIDE_SIZE

//typealias Board = List<Player?>
typealias Board = Map<Position, Player>
typealias Score = Map<Player?, Int>

data class Game(
    val currentGameStarterPlayer: Player = X,
//    val turn: Player = currentGameStarterPlayer,
    val board: Board = emptyMap(),
    val gameState: GameState = Run( turn=currentGameStarterPlayer),
    val score: Score = (Player.entries + null).associateWith { 0 }
)

private fun Score.advance(player: Player?): Score =
    this + (player to this.getValue(player) + 1)

sealed class GameState

class Win(val winner: Player): GameState()
object Draw: GameState()
class Run(val turn: Player): GameState()

fun Game.play(pos: Position): Game = when(gameState){
    is Run -> {
        check(canPlay(pos)) { "Position not empty" }
//        val newBoard = board.mapIndexed { idx, cellContent ->
//            if (idx == pos.index) gameState.turn
//            else cellContent
//        }
        val newBoard = board + (pos to gameState.turn)
//        val newBoard = board + Pair(pos, gameState.turn)
        val newGameState = when{
            newBoard.winnerIn( pos) -> Win( gameState.turn)
            isDraw() -> Draw
            else -> Run(gameState.turn.other())
        }
        val newScore = when(newGameState) {
            is Win -> score.advance(newGameState.winner)
            is Draw -> score.advance(null)
            is Run -> score
        }

        this.copy(board = newBoard, gameState = newGameState, score=newScore)
    }
    is Win, is Draw -> error("Game is already finished")
}

fun Game.canPlay(pos: Position): Boolean = !board.containsKey(pos)


fun Game.restartGame(): Game
{
    check( this.gameState is Run)
    return Game(currentGameStarterPlayer = currentGameStarterPlayer.other(), score = score.advance(this.gameState.turn.other()))
}

//fun Board.isWinner(p: Player): Boolean =
//    //check Rows
//    (0..6 step 3).any{ rowIdx-> (0..2).all{ offset -> this[rowIdx+offset] == p}} ||
//    //check Colums
//    (0..2).any{ colIdx -> (0..6 step 3).all { offset -> this[colIdx+offset] == p }} ||
//    // check diagonal \
//    (0..8 step 4).all{ pos -> this[pos] == p} ||
//    // check diagonal /
//    (2..6 step 2).all { pos -> this[pos] == p}

fun Board.winnerIn(pos: Position): Boolean {
    if (size < BOARD_SIDE_SIZE * 2 - 1) return false
    val player = this[pos]
    val playerPositions = this.filterValues { it == player }.keys
    return listOf<(Position) -> Boolean>( // Conditions to check
        { it.row == pos.row },
        { it.col == pos.col },
        { it.backSlash },
        { it.slash }
    ).any { playerPositions.count(it) == BOARD_SIDE_SIZE }
}
/**
 * IsDraw is called on a fully filled board only when there are no winners,
 * or when the board is not full and no winners
 */

fun Game.isDraw(): Boolean = board.size == BOARD_TOTAL_SIZE

